--- a/messagerie.html
+++ b/messagerie.html
@@ -56,12 +56,11 @@
           </li>
           <li><a href="#"><i class="fa-brands fa-ubuntu"></i> Operation</a></li>
           <li><a href="#"><i class="fa-solid fa-cube"></i> PDR</a></li>
-          <li><a href="structures.html"><i class="fa-solid fa-building"></i> Gestion des Structures</a></li> <!-- Ajouté ici -->
+          <li><a href="#"><i class="fa-solid fa-file-invoice"></i> Document d'acompagnement</a></li>
         </ul>
       </li>
     </ul>
-</aside>
-
+  </aside>
 <!-- Main Content -->
 <div class="main-content">
   <div class="topbar">
